# graph-lemon

./: .gitignore  ;  CMakeLists.txt  DX.sln  README.md
DX/: .shader-error.txt.swp  BaseApplication.cpp  BaseApplication.h  BaseMesh.cpp  BaseMesh.h  BaseShader.cpp  BaseShader.h  Camera.cpp  Camera.h  ColourShader.cpp  ColourShader.h  CubeMesh.cpp  CubeMesh.h  D3D.cpp  D3D.h  DX.vcxproj  DX.vcxproj.filters  DepthShader.cpp  DepthShader.h  GeometryShader.cpp  GeometryShader.h  Input.cpp  Input.h  Lab1.cpp  Lab1.h  Lab2.cpp  Lab2.h  Lab3.cpp  Lab3.h  Light.cpp  Light.h  LightShader.cpp  LightShader.h  Main.cpp  MainApplication.cpp  MainApplication.h  Material.cpp  Material.h  Model.cpp  Model.h  (+62 more)
res/: Thumbs.db
shaders/: .light_alpha_map_ps.hlsl.swp  .light_alpha_map_vs.hlsl.swp  .normal_alpha_map_ps.hlsl.swp  .normal_alpha_map_vs.hlsl.swp  .normal_alpha_spec_map_ps.hlsl.swp  .normal_alpha_spec_map_vs.hlsl.swp  colour_ps.hlsl  colour_vs.hlsl  depth_ps.hlsl  depth_vs.hlsl  gauss_blur_h_ps.hlsl  gauss_blur_h_vs.hlsl  gauss_blur_v_ps.hlsl  gauss_blur_v_vs.hlsl  geometrybox_gs.hlsl  geometrybox_ps.hlsl  geometrybox_vs.hlsl  light_alpha_map_ps.hlsl  light_alpha_map_vs.hlsl  light_alpha_spec_map_ps.hlsl  light_alpha_spec_map_vs.hlsl  light_ds.hlsl  light_ps.hlsl  light_spec_map_ps.hlsl  light_spec_map_vs.hlsl  light_vs.hlsl  light_wave_vs.hlsl  normal_alpha_map_ps.hlsl  normal_alpha_map_vs.hlsl  normal_alpha_spec_map_ps.hlsl  normal_alpha_spec_map_vs.hlsl  normal_map_ds.hlsl  normal_map_ps.hlsl  normal_map_vs.hlsl  normal_spec_map_ps.hlsl  normal_spec_map_vs.hlsl  normal_wave_vs.hlsl  tessellation_ds.hlsl  tessellation_hs.hlsl  tessellation_ps.hlsl  (+5 more)
